[build-system]
requires = ["setuptools>=77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "datime"
description = "Python package with convenience functions for dates, times, and intervals"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dynamic = [
    "version",
]

[[project.authors]]
name = "William Jackson"
email = "william@subtlecoolness.com"

[project.urls]
"Homepage" = "https://github.com/williamjacksn/datime"
"Changes" = "https://github.com/williamjacksn/datime/blob/main/CHANGES.md"
"Issues" = "https://github.com/williamjacksn/datime/issues"

[tool.setuptools.dynamic]
version.attr = "datime.__version__"
