[build-system]
build-backend = "uv_build"
requires = ["uv_build>=0.7.19,<0.8.0"]

[project]
name = "datime"
version = "2025.0"
description = "Python package with convenience functions for dates, times, and intervals"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[[project.authors]]
name = "William Jackson"
email = "william@subtlecoolness.com"

[project.urls]
"Homepage" = "https://github.com/williamjacksn/datime"
"Changes" = "https://github.com/williamjacksn/datime/blob/main/CHANGES.md"
"Issues" = "https://github.com/williamjacksn/datime/issues"
